# avs

./: Cargo.toml  Dockerfile  README.md  blueprint.json  build.rs  flake.nix  foundry.toml  metadata.json  rust-toolchain.toml  verify_proxy_contracts.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  verify-template.yml
contracts/: foundry.toml  remappings.txt
contracts/script/: DeployCoreContracts.s.sol  InitializeContracts.s.sol  InitializeCoreContracts.s.sol
contracts/src/: ECDSAServiceManager.sol  ECDSAServiceManagerBase.sol  ECDSAStakeRegistry.sol  ECDSAStakeRegistryStorage.sol  HyperlaneDispatcher.sol  TangleHyperlaneReceiver.sol  TangleServiceManager.sol
contracts/src/interfaces/: IRemoteChallenger.sol
contracts/src/test/: TestAVSDirectory.sol  TestDelegationManager.sol  TestPaymentCoordinator.sol  TestRemoteChallenger.sol  TestSlasher.sol  TestTangleServiceManager.sol
contracts/test/: EigenlayerBase.sol  TangleServiceManager.t.sol
docker/: entrypoint.sh
src/: error.rs  lib.rs  main.rs  tests.rs
src/utils/: constants.rs  eigenlayer.rs  mod.rs  sol_imports.rs  tangle.rs
test/: EigenlayerBase.sol  TangleServiceManager.t.sol
