[package]
name = "tangle-avs"
version = "0.1.0"
edition = "2021"
description = "Tangle Avs"
authors = ["Webb Tools"]
license = "Unlicense"
homepage = "https://tangle.tools"
repository = "https://github.com/webb-tools/tangle-avs"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
tracing = "0.1"
async-trait = "0.1"
color-eyre = "0.6"
structopt = "0.3.26"
tokio = { version = "1.39", default-features = false, features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter"] }
eigensdk = { version = "0.1.0", features = ["full", "utils", "types"] }
alloy-primitives = "0.7.2"
lock_api = "0.4.12"
parking_lot = "0.12.3"

[dependencies.gadget-sdk]
# version = "0.1.2"
git = "https://github.com/webb-tools/gadget"
default-features = false
features = ["std", "getrandom"]

[build-dependencies]
blueprint-metadata = "0.1.5"

[lib]
path = "src/lib.rs"

[[bin]]
name = "tangle-avs"
path = "src/main.rs"
