[package]
name = "tangle-avs"
version = "0.1.0"
edition = "2021"
description = "Tangle Avs"
authors = ["Webb Tools"]
license = "Unlicense"
homepage = "https://tangle.tools"
repository = "https://github.com/webb-tools/tangle-avs"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
tracing = "0.1"
async-trait = "0.1"
color-eyre = "0.6"
futures = "0.3.31"
structopt = "0.3.26"
tokio = { version = "1.41", default-features = false, features = ["full"] }
tokio-retry = "0.3.0"
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter"] }
thiserror = "2.0.3"
eigensdk = { version = "0.1.1", features = ["full", "utils", "types"] }
alloy-primitives = "0.8.12"
alloy-provider = { version = "0.5", default-features = false, features = ["reqwest", "ws"] }
alloy-sol-types = "0.8.12"
alloy-signer-local = "0.7"
alloy-signer = "0.7"
alloy-contract = "0.5"
lock_api = "0.4.12"
parking_lot = "0.12.3"
url = "2.5.3"
uuid = { version = "1.10.0", features = ["v4"] }
hex = "0.4.3"
reqwest = "0.12.8"
serde_json = "1.0.133"
num-bigint = "0.4.6"
tempfile = "3.10.1"

[dependencies.gadget-sdk]
git = "https://github.com/webb-tools/gadget"
default-features = false
features = ["std", "getrandom"]

[dependencies.gadget-io]
git = "https://github.com/webb-tools/gadget"
default-features = false
features = ["std"]

[dev-dependencies]
blueprint-test-utils = { git = "https://github.com/webb-tools/gadget" }

[build-dependencies]
blueprint-build-utils = { git = "https://github.com/webb-tools/gadget" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "tangle-avs"
path = "src/main.rs"
